--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,578 @@
-.App {
-  text-align: center;
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Raleway:wght@400;700&display=swap");
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+:root {
+  --color-primary-intro: hsl(217, 28%, 15%);
+  --color-primary-main-bg: hsl(218, 28%, 13%);
+  --color-primary-footer-bg: hsl(216, 53%, 9%);
+  --color-primary-testimonial-bg: hsl(219, 30%, 18%);
+  --color-accent: hsl(0, 100%, 63%);
+  --color-accent-c2a-v1: hsl(198, 60%, 50%);
+  --color-accent-c2a-v2: hsl(176, 68%, 64%);
+  --color-light: hsl(221, 36%, 91%);
+  --color-white: hsl(0, 0%, 100%);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+/* Typhography */
+html {
+  font-size: 62.5%;
+  line-height: 1.5;
+}
+
+body {
+  font-family: "Open Sans", sans-serif;
+  font-size: 1.4rem;
+}
+
+.all-wrapper {
+  background-color: var(--color-white);
+}
+
+.all-wrapper.dark {
+  background-color: var(--color-primary-main-bg);
+}
+
+.container {
+  padding: 0 5%;
+  max-width: 1440px;
+  width: 100%;
+  margin: auto;
+}
+
+h1,
+h2,
+h3 {
+  font-family: "Raleway", sans-serif;
+}
+
+h1 {
+  font-size: 3rem;
+}
+
+@media screen and (min-width: 768px) {
+  .container {
+    padding: 0 10%;
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+/* List */
+.list {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
+
+.list--inline .list__item {
+  display: inline-block;
+  padding: 0 1rem;
+}
+
+/* link */
+.link {
+  text-decoration: none;
+  color: var(--color-primary-footer-bg);
+}
+
+.dark .link {
+  color: var(--color-white);
+}
+
+.link:hover {
+  opacity: 0.7;
+}
+
+/* image */
+.image {
+  width: 100%;
+}
+
+/* flex */
+.flex {
+  display: flex;
+}
+
+/* grid */
+.grid {
+  display: grid;
+}
+
+/* Button */
+.btn {
+  padding: 1.5rem 6rem;
+  border-radius: 5rem;
+  border: 0;
+  cursor: pointer;
+  outline: 0;
+}
+
+.btn:hover {
+  opacity: 0.8;
+}
+
+.btn--primary {
+  color: var(--color-white);
+  background-color: var(--color-accent-c2a-v1);
+}
+
+/* media */
+.media {
+  display: flex;
+  align-items: center;
+}
+
+.media__image {
+  height: 50px;
+  width: 50px;
+  border-radius: 50%;
+  margin-right: 1rem;
+}
+
+.media__title {
+  margin: 0;
+  font-size: 1.6rem;
+  opacity: 0.8;
+}
+
+.media__details {
+  margin: 0;
+  font-size: 1.1rem;
+}
+
+/***************** Sections *******************888*/
+
+/* nav  */
+.section-nav .container {
+  /* for toggler positioning */
+}
+.dark .section-nav {
+  background-color: var(--color-primary-intro);
+}
+.nav {
+  align-items: center;
+  justify-content: space-between;
+  padding: 2rem 0;
+  position: relative; 
+}
+
+.nav__brand {
+  font-size: 1rem;
+  width: 100px;
+  height: 32px;
+}
+
+.nav__item:last-child {
+  padding-right: 0;
+}
+
+@media screen and (min-width: 768px) {
+  .nav__brand {
+    width: auto;
+    height: auto;
+  }
+}
+
+/* intro section */
+.section-intro {
+  padding: 5rem 0;
+}
+
+.dark .section-intro {
+  background-color: var(--color-primary-intro);
+  background-image: url("./assets/bg-curvy-mobile.svg");
+  background-repeat: no-repeat;
+  background-position: center bottom;
+  background-size: contain;
+}
+
+.intro {
+  text-align: center;
+  max-width: 550px;
+  margin: auto;
+}
+
+.dark .intro {
+  color: var(--color-white);
+}
+
+.intro__tagline {
+  max-width: 450px;
+  margin: auto;
+  margin-bottom: 3rem;
+  opacity: 0.8;
+}
+
+@media screen and (min-width: 768px) {
+  .dark .section-intro {
+    background-image: url("./assets/bg-curvy-desktop.svg");
+  }
+}
+
+/* Feature section */
+.features {
+  padding: 7rem 0;
+  grid-template-columns: 1fr;
+}
+
+.feature {
+  padding: 2rem;
+  text-align: center;
+  max-width: 400px;
+  margin: auto;
+}
+
+.feature__heading {
+  font-size: 2rem;
+  color: var(--color-primary-intro);
+  margin-top: 2rem;
+  margin-bottom: 1rem;
+  opacity: 0.8;
+}
+
+.dark .feature__heading {
+  color: var(--color-white);
+}
+
+.feature__details {
+  opacity: 0.8;
+  margin-top: 0;
+}
+
+.dark .feature__details {
+  color: var(--color-white);
+}
+
+@media screen and (min-width: 768px) {
+  .features {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+/* Productive */
+.productive {
+  flex-direction: column;
+  padding: 5rem 0;
+}
+
+.productive__image {
+  margin-bottom: 3rem;
+}
+
+.productive__heading {
+  opacity: 0.8;
+}
+
+.dark .productive__heading {
+  color: var(--color-white);
+  opacity: 0.9;
+}
+
+.productive__text {
+  opacity: 0.8;
+}
+
+.dark .productive__text {
+  color: var(--color-white);
+}
+
+.productive__link-how {
+  color: var(--color-accent-c2a-v1);
+  border-bottom: 1px solid var(--color-accent-c2a-v1);
+  padding-bottom: 0.5rem;
+}
+
+.dark .productive__link-how {
+  color: var(--color-accent-c2a-v1);
+}
+
+/* .productive__link-how {
+  text-decoration: underline;
+} */
+
+.productive__icon-arrow {
+  transform: translate(5px, 3px);
+}
+
+@media screen and (min-width: 600px) {
+  .productive {
+    flex-direction: row;
+    align-items: center;
+  }
+
+  .productive__image {
+    width: 50%;
+  }
+
+  .productive__heading {
+    font-size: 3rem;
+  }
+
+  .productive__details {
+    margin-left: 3rem;
+  }
+}
+
+/* Testimonial section */
+.testimonials {
+  flex-wrap: wrap;
+  justify-content: center;
+  padding: 15rem 0 0;
+}
+
+.testimonial {
+  background-color: var(--color-light);
+  padding: 2rem;
+  border-radius: 1rem;
+  margin: 1rem 0;
+  width: 100%;
+  position: relative;
+  z-index: 11;
+}
+
+.dark .testimonial {
+  color: var(--color-white);
+  background-color: var(--color-primary-testimonial-bg);
+}
+
+.testimonial:first-child::before {
+  content: url("./assets/bg-quotes.png");
+  position: absolute;
+  top: -30px;
+  left: 0;
+  z-index: 1;
+}
+
+.testimonial__text {
+  font-size: 1.3rem;
+  margin-bottom: 2rem;
+}
+
+@media screen and (min-width: 700px) {
+  .testimonial {
+    width: calc(50% - 1rem);
+    margin-right: 1rem;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .testimonial {
+    width: calc(33% - 1rem);
+  }
+}
+
+/* callout section */
+.callout {
+  text-align: center;
+  background-color: var(--color-light);
+  padding: 4rem;
+  border-radius: 1rem;
+  max-width: 750px;
+  margin: auto;
+  transform: translateY(15rem);
+}
+
+.dark .callout {
+  background-color: var(--color-primary-intro);
+  color: var(--color-white);
+}
+
+.callout__heading {
+  opacity: 0.9;
+  margin-top: 0;
+}
+
+.callout__input-group {
+  flex-direction: column;
+  /* align-items: center;
+  justify-content: center; */
+}
+
+.callout__input {
+  outline: 0;
+  border: 1px solid var(--color-primary-intro);
+  border-radius: 3rem;
+  padding: 1.3rem 2rem;
+  width: 100%;
+  margin: 2rem 0;
+}
+
+.callout .btn {
+  width: 100%;
+}
+
+@media screen and (min-width: 768px) {
+  .callout {
+    padding: 4rem 5rem;
+  }
+
+  .callout__heading {
+    font-size: 2.5rem;
+  }
+
+  .callout__input-group {
+    flex-direction: row;
+    align-items: center;
+  }
+
+  .callout .btn {
+    width: 30rem;
+    padding-left: 1rem;
+    padding-right: 1rem;
+    margin-left: 2rem;
+  }
+}
+
+/* icon text */
+.icon-text {
+  align-items: flex-start;
+}
+
+.icon-text__image {
+  transform: translateY(10px);
+  margin-right: 2rem;
+}
+
+.icon-text__text {
+  margin: 0;
+}
+
+.dark .icon-text {
+  color: var(--color-white);
+}
+
+/* footer section */
+.section-footer {
+  padding: 30rem 0 5rem;
+}
+
+.dark .section-footer {
+  background-color: var(--color-primary-footer-bg);
+}
+
+.footer__flex-container {
+  flex-direction: column;
+}
+
+.footer__brand {
+  width: 100px;
+  height: 32px;
+  margin-bottom: 2rem;
+}
+
+.footer__conclusion {
+  max-width: 250px;
+  margin-bottom: 1rem;
+}
+
+/* footer contacts */
+.footer__contacts {
+  margin-bottom: 7rem;
+}
+
+.footer__contacts .icon-text__text {
+  margin: 0.5rem;
+}
+
+.footer__contacts .icon-text__image {
+  transform: translateY(13px);
+}
+
+/* footer links */
+.footer__links {
+  padding: 0 2rem;
+  margin-bottom: 2rem;
+}
+
+.footer__item {
+  padding: 0.5rem 0;
+}
+
+.footer__link {
+  opacity: 0.8;
+}
+
+.footer__link:hover {
+  opacity: 1;
+}
+
+@media screen and (min-width: 768px) {
+  .footer__flex-container {
+    flex-direction: row;
+    align-items: flex-start;
+    justify-content: space-between;
+  }
+
+  .footer__brand {
+    width: auto;
+    height: auto;
+  }
+
+  .footer__contacts {
+    padding: 0 2rem;
+  }
+}
+
+/* Social */
+.social {
+  text-align: center;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: space-between;
+  padding-bottom: 0;
 }
 
-.App-link {
-  color: #61dafb;
+.social__link {
+  opacity: 0.6;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.social__link:hover {
+  opacity: 1;
+}
+
+.social__icon {
+  margin: 1rem;
+  transform: scale(1.3);
+}
+
+@media screen and (min-width: 768px) {
+  .social {
+    flex-direction: row;
   }
-  to {
-    transform: rotate(360deg);
-  }
+}
+
+/* Toggler Component */
+.toggler-container {
+  --height: 3rem;
+  background-color: var(--color-light);
+  border-radius: 2rem;
+  height: var(--height);
+  width: 7rem;
+  display: inline-flex;
+  align-items: center;
+  padding: 0 0.5rem;
+  position: relative;
+  cursor: pointer;
+  position: absolute;
+  bottom: -30px;
+  right: 0;
+}
+
+.toggler {
+  height: calc(var(--height) - 0.7rem);
+  width: calc(var(--height) - 0.7rem);
+  border-radius: 50%;
+  background-color: var(--color-accent-c2a-v2);
+}
+
+.toggler-position--left {
+  justify-content: flex-start;
+}
+
+.toggler-position--right {
+  justify-content: flex-end;
 }
